# nncp-metal

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_and_test.sh  build_test.mk  nncp.c
scripts/: convert_models.py
src/: version.h.in
src/libnc/metal/: nc_metal.c  nc_metal_device.c
src/metal/: algorithm_router.c  algorithm_router.h  compression_integration.c  compression_integration.h  compression_selector_stub.c  nncp_diagnostics.c  nncp_metal.c  nncp_original_port.c  nncp_original_port.h
src/metal/compute/: matrix_ops.metal  neural_net.metal  preprocessing.metal
src/metal/include/: benchmark.h  compute_kernels.h  hybrid_inference.h  memory_manager.h  metal_context.h  neural_engine.h
src/metal/wrapper/: benchmark.mm  compute_kernels.mm  memory_manager.mm  metal_buffers.mm  metal_context.mm  metal_kernels.mm  neural_engine.mm
src/neural/acceleration/: MetalComputeAccelerator.h  MetalComputeAccelerator.mm
src/neural/attention/: MultiHeadAttention16.h  MultiHeadAttention16.mm
src/neural/benchmark/: PerformanceBenchmark.h  PerformanceBenchmark.mm
src/neural/benchmarks/: ExtendedContextBenchmark.h  ExtendedContextBenchmark.mm
src/neural/compatibility/: cuda_math_compat.c  cuda_math_compat.h
src/neural/config/: cuda_profiles.c  cuda_profiles.h
src/neural/context/: AdaptiveContextManager.h  AdaptiveContextManager.mm  DynamicContextSelector.h  DynamicContextSelector.mm  LongContextProcessor.h  LongContextProcessor.mm  MaximumContextProcessor.h  MaximumContextProcessor.mm  MediumContextProcessor.h  MediumContextProcessor.mm  dynamic_context.c  dynamic_context.h
src/neural/core/: MetalTransformerModel.h  MetalTransformerModel.mm  ProgressiveCompressionEngine.h  ProgressiveCompressionEngine.mm  TransformerLayers.h  TransformerLayers.mm
src/neural/engines/: mps_lstm_compressor.h  mps_lstm_compressor.mm  mps_transformer.h  mps_transformer.mm  test_multiscale_attention.c
src/neural/error/: cuda_error_handler.c  cuda_error_handler.h  cuda_error_performance.c  cuda_error_performance.h
src/neural/ffn/: FeedForwardNetwork3072.h  FeedForwardNetwork3072.mm
src/neural/formats/: enhanced_nncp_format.c  enhanced_nncp_format.h
src/neural/handlers/: small_file_handler.c  small_file_handler.h
src/neural/integration/: neural_bridge.h  neural_bridge.mm  neural_bridge_backup.c  neural_bridge_enhanced.c  neural_bridge_enhanced.h  neural_bridge_lossless.mm  neural_bridge_lossless_cuda.mm  neural_bridge_transformer.c
src/neural/lstm/: nncp_lstm_metal_enhanced.h  nncp_lstm_metal_enhanced.mm
src/neural/memory/: AdaptiveMemoryManager.h  AdaptiveMemoryManager.mm
src/neural/models/: coreml_loader.h  coreml_loader.mm
src/neural/monitoring/: performance_monitor.c  performance_monitor.h
src/neural/ops/: mps_attention.h  mps_attention.mm  mps_lstm.h  mps_lstm.mm  nncp_lstm_metal.h  nncp_lstm_metal.mm  nncp_lstm_metal_shaders.metal  nncp_lstm_prediction.h  nncp_lstm_prediction.mm  nncp_lstm_state_manager.h  nncp_lstm_state_manager.mm
src/neural/optimization/: CacheOptimizer.h  CacheOptimizer.mm  compression_selector.h  compression_selector.mm
src/neural/parallel/: ParallelProcessor.h  ParallelProcessor.mm  parallel_processor.h  parallel_processor.mm
src/neural/performance/: cuda_performance_validator.c  cuda_performance_validator.h
src/neural/precision/: MixedPrecisionEngine.h  MixedPrecisionEngine.mm
src/neural/prediction/: entropy_analyzer.c  entropy_analyzer.h  pattern_matcher.c  pattern_matcher.h  prediction_scorer.c  prediction_scorer.h  simple_pattern_test.c  test_entropy_analyzer.c  test_pattern_matcher.c  test_prediction_scorer.c
src/neural/quality/: quality_validator.c  quality_validator.h
src/neural/robustness/: RobustCompressionEngine.h  RobustCompressionEngine.mm
src/neural/selection/: content_analyzer.c  content_analyzer.h  enhanced_selector.c  enhanced_selector.h  test_content_analyzer.c  test_enhanced_selector.c  test_integration.c
src/neural/sequence/: sequence_manager.c  sequence_manager.h
src/neural/tokenizer/: bpe_tokenizer.c  bpe_tokenizer.h
src/neural/validation/: IntegrityValidator.h  IntegrityValidator.mm  cuda_parameter_validator.c  cuda_parameter_validator.h
src/neural/verification/: FinalPerformanceVerifier.h  FinalPerformanceVerifier.mm  PerformanceVerifier.h  PerformanceVerifier.mm
tests/: CMakeLists.txt  COPYONLY  NeuralCompressionTestSuite.h  NeuralCompressionTestSuite.mm  cuda_compatibility_tests.c  cuda_compatibility_tests.h  cuda_compatibility_tests_simple.c  test_actual_compression.c  test_compression_integration.c  test_vocab.txt
tests/neural/: test_bpe_tokenizer.c  test_compression_selector.c  test_coreml_loader.c  test_enhanced_format.c  test_mps_attention.c  test_mps_lstm.c  test_mps_lstm_compressor.c  test_mps_transformer.c  test_neural_bridge_lstm.c  test_parallel_processor.c  test_performance_monitor.c  test_quality_validator.c  test_sequence_manager.c
tests/unit/: test_basic.c  test_benchmarks_temp.c
